kubernetes/generated/manifests/prod/cilium/CiliumClusterwideNetworkPolicy-allow-argocd-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-argocd-apiserver-egress
spec:
  description: Allow argocd to talk to kube-apiserver.
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: argocd
